--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -399,25 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7238981151228598"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "r2_score(y_test, y_pred)"
+    "r2_test = r2_score(y_test, y_pred)\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "r2_train = r2_score(y_train, y_train_pred)"
    ]
   },
   {
@@ -429,25 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21.958324520566272"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "mean_squared_error(y_test, y_pred)"
+    "\n",
+    "mse_test = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "mse_train = mean_squared_error(y_train, y_train_pred)"
    ]
   },
   {
@@ -459,25 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.4826041560131755"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "mean_absolute_error(y_test, y_pred)"
+    "mae_test = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "mae_train = mean_absolute_error(y_train, y_train_pred)"
    ]
   },
   {
@@ -817,15 +793,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here :\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "y_train_pred = model.predict(X_train)\n",
     "y_pred = model.predict(X_test)"
    ]
   },
@@ -838,25 +812,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9333333333333333"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "accuracy_score(y_test, y_pred)"
+    "acc_test = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "acc_train = accuracy_score(y_train, y_train_pred)"
    ]
   },
   {
@@ -868,25 +834,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9393939393939394"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "\n",
-    "balanced_accuracy_score(y_test, y_pred)"
+    "bal_acc_test = balanced_accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "bal_acc_train = balanced_accuracy_score(y_train, y_train_pred)"
    ]
   },
   {
@@ -898,25 +856,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9333333333333333"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import precision_score\n",
+    "precision_test = precision_score(y_test, y_pred, average='micro')\n",
     "\n",
-    "precision_score(y_test, y_pred, average='micro')"
+    "y_train_pred = model.predict(X_train)\n",
+    "precision_train = precision_score(y_train, y_train_pred, average='micro')"
    ]
   },
   {
@@ -928,25 +877,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9333333333333333"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import recall_score\n",
+    "recall_test = recall_score(y_test, y_pred, average='micro')\n",
     "\n",
-    "recall_score(y_test, y_pred, average='micro')"
+    "y_train_pred = model.predict(X_train)\n",
+    "recall_train = recall_score(y_train, y_train_pred, average='micro')"
    ]
   },
   {
@@ -958,25 +898,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9333333333333333"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import f1_score\n",
+    "f1_test = f1_score(y_test, y_pred, average='micro')\n",
     "\n",
-    "f1_score(y_test, y_pred, average='micro')"
+    "y_train_pred = model.predict(X_train)\n",
+    "f1_train = f1_score(y_train, y_train_pred, average='micro')"
    ]
   },
   {
@@ -988,27 +919,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10,  0,  0],\n",
-       "       [ 0,  9,  2],\n",
-       "       [ 0,  0,  9]], dtype=int64)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here :\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "cm_test = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "confusion_matrix(y_test, y_pred)"
+    "y_train_pred = model.predict(X_train)\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)"
    ]
   },
   {
