--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -793,12 +793,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here :\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
     "y_train_pred = model.predict(X_train)\n",
     "y_pred = model.predict(X_test)"
    ]
